--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <img src="images/overlay.png" id="overlay">
 <img src="images/eldorito.png" id="logo" class="tinted-image">
 <h2 class="browserTitle"><b>Eldorito Server Browser</b></h2>
-<h3><div class="playerCount">00 players</div><div class="serverCount">00 servers</div></h3>
+<h4 class="serverStats"><span class="playerCount">00 players</span>  /  <span class="serverCount">00 servers</span></h4>
 
 <div id="container">
 
