--- a/index.html
+++ b/index.html
@@ -2,30 +2,34 @@
 <head>
     <meta charset="utf-8" />
     <title>Server Browser</title>
-	<!-- Includes -->
+		<!-- Includes -->
 		<script src="js/handlebars.min.js"></script>
 		<script src="js/jquery-1.11.3.min.js"></script>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 		<script src="js/bootstrap.min.js"></script>
-		<script src="js/dewRcon.js"></script>
 		<script src="js/mousetrap.min.js"></script>
-	<!-- Custom stuff -->
+		<!-- Eldorito Stuff -->
+		<script src="js/dewRcon.js"></script>
+		<!-- Custom stuff -->
 		<script src="js/browser.js"></script>
 		<link rel="stylesheet" href="css/browser.css">
 </head>
 
 <body>
+
 	<img src="images/hanger.png" id="bg">
 	<img src="images/overlay.png" id="overlay">
 	<img src="images/eldorito.png" id="logo">
 	<h2 class="browserTitle"><b>Eldorito Server Browser</b></h2>
 	<h4 class="serverStats"><span class="playerCount">00 players</span>  /  <span class="serverCount">00 servers</span></h4>
 
+
 	<div id="container">
 		<div id="serverList" class="serverlist"></div>
 		<button class="refresh" onclick="window.location.reload();">Refresh</button>
 		<div id="serverInfo" class="col-md-3 serverinfo"></div>
+		<div id="connectionStatus"></div>
 	</div>
 
 	<script id="server-panel-template" type="text/x-handlebars-template">
