No need for this to be so visible
Since it's mostly for debugging.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div id="serverList" class="serverlist"></div>
 		<button class="refresh" onclick="window.location.reload();">Refresh</button>
 		<div id="serverInfo" class="col-md-3 serverinfo"></div>
-		<div id="connectionStatus"></div>
+		<div id="connectionStatus" class="text-muted"></div>
 	</div>
 
 	<script id="server-panel-template" type="text/x-handlebars-template">
