Ditching the green for eldorito blue
This scheme hurts the eyes so much less

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<h4><b><center><div class="text-danger">[PRIVATE]</div></center></b></h4>
 					{{else}}
 						<table class="table-bordered statBreakdown">
-							<thead>
+							<thead class="tableHeader">
 								<th><center>Name</center></th>
 								<th><center>Score</center></th>
 								<th><center>K</center></th>
@@ -115,7 +115,7 @@
 
 	<script id="server-list-template" type="text/x-handlebars-template">
 		<table class="serverTable table table-bordered table-hover" id="serverlist{{ i }}">
-			<thead>
+			<thead class="tableHeader">
 				<th><center>IP (Click to Join)</center></th>
 				<th>Details</th>
 				<th><center>Host Location</center></th>
