--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		<button class="refresh" onclick="window.location.reload();">Refresh</button>
 		<div id="serverInfo" class="col-md-3 serverinfo"></div>
 		<div id="connectionStatus" class="text-muted"></div>
+        <div id="setBrowser"><a href="#" onclick="setBrowser();">Set to In-Game Browser (if connected)</a>
 	</div>
 
 	<script id="server-panel-template" type="text/x-handlebars-template">
