Removed the custom alert, added SweetAlert
So much cleaner, just gotta write a custom theme.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/mousetrap.min.js"></script>
+        <script src="js/sweetalert.min.js"></script> 
+        <link rel="stylesheet" type="text/css" href="css/sweetalert.css">       
+        <link rel="stylesheet" type="text/css" href="css/google.css">  
 		<!-- Eldorito Stuff -->
 		<script src="js/dewRcon.js"></script>
 		<!-- Custom stuff -->
