SweetAlert now styled to match everything else
Sooo sexy

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<script src="js/mousetrap.min.js"></script>
         <script src="js/sweetalert.min.js"></script> 
         <link rel="stylesheet" type="text/css" href="css/sweetalert.css">       
-        <link rel="stylesheet" type="text/css" href="css/google.css">  
+        <link rel="stylesheet" type="text/css" href="css/eldorito.css">  
 		<!-- Eldorito Stuff -->
 		<script src="js/dewRcon.js"></script>
 		<!-- Custom stuff -->
