Errors if not connected

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<button class="refresh" onclick="window.location.reload();">Refresh</button>
 		<div id="serverInfo" class="serverinfo"></div>
 		<div id="connectionStatus"></div>
-        <div id="setBrowser"><a href="#" onclick="setBrowser();">Set to In-Game Browser (if connected)</a>
+        <div id="setBrowser"><a href="#" onclick="setBrowser();">Set to In-Game Browser</a>
 	</div>
 
 	<script id="server-panel-template" type="text/x-handlebars-template">
