Prep work for a feature that may never come
Also some minor styling things.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </li>
                 </ul>
                 {{#if passworded}}
-                    <h3><b><center><div class="text-danger">[PRIVATE]</div></center></b></h3>
+                    <h3><b><center><div class="text-danger"><a href="#" onClick="showPrivate()">[PRIVATE]</a></div></center></b></h3>
                 {{else}}
                     <table class="statBreakdown">
                         <thead class="tableHeader">
