--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
 	<div id="container">
 		<div id="serverList" class="serverlist"></div>
 		<button class="refresh" onclick="window.location.reload();">Refresh<img class="controllerButton" src="images/XboxOne_Y.png"></button>
+        <button class="closeButton" onclick="closeBrowser();">Close<img class="controllerButton" src="images/XboxOne_B.png"></button>
 		<div id="serverInfo" class="serverinfo"></div>
 		<div id="connectionStatus"></div>
         <div id="setBrowser"><a href="#" onclick="setBrowser();">Set to In-Game Browser</a>
-	</div>
+    </div>
 
 	<script id="server-panel-template" type="text/x-handlebars-template">
 		<div class="gameCard">
