--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 </head>
 
 <body>
-	<img src="images/hanger.png" id="bg">
-	<div id="overlay"></div>
+	<img src="images/ship.png" id="bg">
+	<!--<div id="overlay"></div>-->
 	<img src="images/eldorito.png" id="logo">
 	<h3 class="browserTitle"><b>Eldorito Server Browser</b></h3>
 	<h4 class="serverStats"><span class="playerCount">00 players</span>  /  <span class="serverCount">00 servers</span></h4>
