--- a/index.DT.html
+++ b/index.DT.html
@@ -5,13 +5,13 @@
 		<!-- Includes -->
 		<script src="js/handlebars.min.js"></script>
 		<script src="js/jquery-1.11.3.min.js"></script>
-		<!-- DataTables -->
-		<link rel="stylesheet" href="css/jquery.dataTables.min.css">
-		<script src="js/jquery.dataTables.min.js"></script>
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 		<script src="js/bootstrap.min.js"></script>
+		<!-- DataTables -->
+		<link rel="stylesheet" href="css/jquery.dataTables.min.css">
+		<script src="js/jquery.dataTables.min.js"></script>
 		<script src="js/mousetrap.min.js"></script>
 		<!-- Sweet Alert -->
         <script src="js/sweetalert.min.js"></script> 
@@ -20,17 +20,22 @@
         <!-- Gamepad support -->
         <script src="js/gamepad.js"></script>
 		<!-- Eldorito Stuff -->
-		<!--
 		<script src="js/dewRcon.js"></script>
-		-->
 		<!-- Custom stuff -->
 		<script src="js/browser.DT.js"></script>
-		<link rel="stylesheet" href="css/browser.css">
+		<link rel="stylesheet" href="css/browser.DT.css">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
-<table id="serverTable" class="display" width="100%"></table>
+	<img src="images/ship.png" id="bg">
+	<img src="images/eldorito.png" id="logo">
+	<h3 class="browserTitle"><b>Eldorito Server Browser</b></h3>
+	<h4 class="serverStats"><span class="playerCount">00 players</span>  /  <span class="serverCount">00 servers</span></h4>
+    <button class="refresh" onclick="window.location.reload();">Refresh<img class="controllerButton" src="images/XboxOne_Y.png"></button>
+    <button class="closeButton" onclick="closeBrowser();">Close<img class="controllerButton" src="images/XboxOne_Windows.png"></button>
+    <table id="serverTable" class="display" width="100%"></table>
+    <!--<div id="connectionStatus"></div>-->
 </body>
 </html>
