--- a/index.DT.html
+++ b/index.DT.html
@@ -3,7 +3,6 @@
     <meta charset="utf-8" />
     <title>Eldorito Server Browser</title>
 		<!-- Includes -->
-		<script src="js/handlebars.min.js"></script>
 		<script src="js/jquery-1.11.3.min.js"></script>
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -18,7 +17,7 @@
         <link rel="stylesheet" type="text/css" href="css/sweetalert.css">       
         <link rel="stylesheet" type="text/css" href="css/eldorito.css">
         <!-- Gamepad support -->
-        <script src="js/gamepad.js"></script>
+        <!--<script src="js/gamepad.js"></script>-->
 		<!-- Eldorito Stuff -->
 		<script src="js/dewRcon.js"></script>
 		<!-- Custom stuff -->
@@ -34,7 +33,7 @@
 	<h3 class="browserTitle"><b>Eldorito Server Browser</b></h3>
 	<h4 class="serverStats"><span class="playerCount">00 players</span>  /  <span class="serverCount">00 servers</span></h4>
     <button class="refresh" onclick="window.location.reload();">Refresh<img class="controllerButton" src="images/XboxOne_Y.png"></button>
-    <button class="closeButton" onclick="closeBrowser();">Close<img class="controllerButton" src="images/XboxOne_Windows.png"></button>
+    <!--<button class="closeButton" onclick="closeBrowser();">Close<img class="controllerButton" src="images/XboxOne_Windows.png"></button>-->
     <table id="serverTable" class="display" width="100%"></table>
     <!--<div id="connectionStatus"></div>-->
 </body>
