--- a/index.DT.html
+++ b/index.DT.html
@@ -33,7 +33,7 @@
 	<h3 class="browserTitle"><b>Eldorito Server Browser</b></h3>
 	<h4 class="serverStats"><span class="playerCount">00 players</span>  /  <span class="serverCount">00 servers</span></h4>
     <button class="refresh" onclick="window.location.reload();">Refresh<img class="controllerButton" src="images/XboxOne_Y.png"></button>
-    <!--<button class="closeButton" onclick="closeBrowser();">Close<img class="controllerButton" src="images/XboxOne_Windows.png"></button>-->
+	<button class="closeButton" onclick="closeBrowser();">Close<img class="controllerButton" src="images/XboxOne_Windows.png"></button>
     <table id="serverTable" class="display" width="100%"></table>
     <!--<div id="connectionStatus"></div>-->
 </body>
