--- a/index.DT.html
+++ b/index.DT.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" type="text/css" href="css/sweetalert.css">       
         <link rel="stylesheet" type="text/css" href="css/eldorito.css">
         <!-- Gamepad support -->
-        <!--<script src="js/gamepad.js"></script>-->
+        <script src="js/gamepad.js"></script>
 		<!-- Eldorito Stuff -->
 		<script src="js/dewRcon.js"></script>
 		<!-- Custom stuff -->
