Added page footer

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 	<h4 class="serverStats"><span class="playerCount">00 players</span>  /  <span class="serverCount">00 servers</span></h4>
     <button class="refresh" onclick="refreshTable();">Refresh<img class="controllerButton" src="images/XboxOne_Y.png"></button>
 	<button class="closeButton" onclick="closeBrowser();">Close<img class="controllerButton" src="images/XboxOne_Windows.png"></button>
+	<div id="pageFooter"></div>
     <table id="serverTable" class="display" width="100%"></table>
     <!--<div id="connectionStatus"></div>-->
 </body>
