--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-	<img src="images/reach.jpg" id="bg">
+	<img src="images/the_installation_by_scourge07-d6s7s9o.jpg" id="bg">
 	<img src="images/eldorito.png" id="logo">
 	<h3 class="browserTitle"><b>Eldorito Server Browser</b></h3>
 	<h4 class="serverStats"><span class="playerCount">00 players</span>  /  <span class="serverCount">00 servers</span></h4>
