--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@
 </head>
 
 <body>
-	<img src="images/the_installation_by_scourge07-d6s7s9o.jpg" id="bg">
-	<img src="images/eldorito.png" id="logo">
-	<h3 class="browserTitle"><b>Eldorito Server Browser</b></h3>
+	<h3 class="browserTitle"><b>Server Browser</b></h3>
 	<h4 class="serverStats"><span class="playerCount">00 players</span>  /  <span class="serverCount">00 servers</span></h4>
     <button class="refresh" onclick="refreshTable();">Refresh<img class="controllerButton" src="images/XboxOne_Y.png"></button>
 	<button class="closeButton" onclick="closeBrowser();">Close<img class="controllerButton" src="images/XboxOne_Windows.png"></button>
     <table id="serverTable" class="display" width="100%"></table>
     <!--<div id="connectionStatus"></div>-->
+    <div id="gamecard"></div>
 </body>
 </html>
