--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Eldorito Server Browser</title>
+    <title>Server Browser</title>
 		<!-- Includes -->
 		<script src="js/jquery-1.11.3.min.js"></script>
 		<!-- Bootstrap -->
@@ -34,6 +34,20 @@
 	<button class="closeButton" onclick="closeBrowser();">Close<img class="controllerButton" src="images/XboxOne_Windows.png"></button>
     <table id="serverTable" class="display" width="100%"></table>
     <!--<div id="connectionStatus"></div>-->
-    <div id="gamecard"></div>
+    <div id="gamecardborder">
+        <div id="gamecard">
+        <div id="title"></div>
+            <img id="mappic">
+            <img id="varpic">
+            <div id="host"></div>
+            <div id="name"></div>
+            <div id="voip"></div>
+            <div id="sprint"></div>
+        </div>
+    </div>
+<div id="extBorder">
+<div id="extBorder2">
+</div>
+</div>
 </body>
 </html>
