Got sidebar layout complete
Just need to copy over scoreboard code

--- a/index.html
+++ b/index.html
@@ -34,15 +34,23 @@
 	<button class="closeButton" onclick="closeBrowser();">Close<img class="controllerButton" src="images/XboxOne_Windows.png"></button>
     <!--<div id="connectionStatus"></div>-->
     <table id="serverTable" class="display" width="100%"></table>
-    <div id="gamecardborder">
-        <div id="gamecard">
-        <div id="title"></div>
-            <img id="mappic">
-            <img id="varpic">
-            <div id="host"></div>
-            <div id="name"></div>
-            <div id="voip"></div>
-            <div id="sprint"></div>
+    <div id="gamecard">
+        <div id="cardheaderborder">
+            <div id="cardheader">
+                <div id="title"></div>
+                <img id="mappic">
+                <img id="varpic">
+            </div>
+        </div>
+        <div id="scoreboard">Scoreboard</div>
+        <div id="gameinfoborder">
+            <div id="gameinfo">
+                <div id="host"></div>
+                <div id="name"></div>
+                <div id="voip"></div>
+                <div id="sprint"></div>
+                <div id="version"></div>
+            </div>
         </div>
     </div>
     <div id="extBorder">
