--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <img id="varpic">
             </div>
         </div>
-        <div id="scoreboard">Scoreboard</div>
+        <div id="scoreboard"></div>
         <div id="gameinfoborder">
             <div id="gameinfo">
                 <div id="host"></div>
